			   XPCE ChangeLog
			   ==============

VERSION 6.6.23, distributed with SWI-Prolog 5.6.23
==================================================

* PORT: Include LDFLAGS making xpce-client.

* FIXED: Class textbuffer: crash in Windows on <-scan.  Jacco van Ossenbruggen.

* FIXED: PceEmacs: Avoid loading DDE interface on Unix.

VERSION 6.6.21, distributed with SWI-Prolog 5.6.21
==================================================

* PORT: Bug#214: Compatibility to new FreeType #include standards.
  Darren Bane.

* PORT: Bug#212: parallel make.  Keri Harris.

VERSION 6.6.19, distributed with SWI-Prolog 5.6.19
==================================================

* FIXED: Class editor: possible division-by-zero filling a line.

VERSION 6.6.18, distributed with SWI-Prolog 5.6.18
==================================================

* ADDED: Allow for spaces in #include file of defaults.  Tom Conlon.

* FIXED: Crash in window placement if a new window is created from an
  event that first destroys the window from which it originated.
  Jochem Liem.

VERSION 6.6.17, distributed with SWI-Prolog 5.6.17
==================================================

* FIXED: Colours of arrow-heads in PostScript generation.  Anders Bouwer.

VERSION 6.6.16, distributed with SWI-Prolog 5.6.16
==================================================

* FIXED: Crash when accessing files with illegal multi-byte sequences in the
  name (Unix version only).

VERSION 6.6.15, distributed with SWI-Prolog 5.6.15
==================================================

* FIXED: PceEmacs: Backspace in incremental search.

VERSION 6.6.14, distributed with SWI-Prolog 5.6.14
==================================================

* FIXED: compatibility problem in saved text_buffer objects between version
  5.4.7 and 5.6.13.  Tom Conlon.  There is still an issue.  While providing
  Unicode support the save format was changed, but the version was not
  incremented.  Unfortunately there is no other way to distinguish the old